cluster/apps/monitoring/tools/prometheus-exporter/speedtest-exporter/speedtest-exporter-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: speedtest-exporter-service
  namespace: monitoring
  labels:
    app: speedtest-exporter
spec:
  selector:
    app: speedtest-exporter
  type: ClusterIP
  ports:
  - name: http-exporter
    port: 9090
    targetPort: http-exporter
    protocol: TCP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: speedtest-exporter-deployment
  namespace: monitoring
  labels:
    app: speedtest-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: speedtest-exporter
  template:
    metadata:
      labels:
        app: speedtest-exporter
    spec:
      nodeSelector:
        node-type: worker
      containers:
      - name: speedtest-exporter-container
        image: danopstech/speedtest_exporter:latest
        command: ["/speedtest_exporter", "-server_id", "27345", "-server_fallback"]
        # env:
        # - name: SERVER_ID
        #   value: "27345"
        ports:
        - name: http-exporter
          containerPort: 9090
          protocol: TCP
