cluster/apps/monitoring/tools/prometheus-exporter/speedtest-exporter/speedtest-exporter-ingressroute.yaml
# speedtest-exporter-metrics-local-ingressroute

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: speedtest-exporter-metrics-local-ingressroute
  namespace: monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`speedtest.${SECRET_DOMAIN_LOCAL_02}`) && PathPrefix(`/metrics`)
      kind: Rule
      services:
        - name: speedtest-exporter-service
          port: 9090
